Fix: wrap height

--- a/styles/base/_common.scss
+++ b/styles/base/_common.scss
@@ -24,7 +24,7 @@ input[type='number'] {
 .wrap {
   background-color: variable.$BG-003;
   padding: 10px 20px;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 60px);
   overflow: scroll;
   min-width: 630px;
 }
